<resources>
    <string name="app_name">ExamenC1</string>
    <string name="cantidad">Cantidad de producto</string>
    <string name="producto">Producto</string>
    <string name="precio">Precio del producto</string>
    <string name="txtPrecio">$</string>
    <string name="numero">#</string>
    <string name="subTotal">SubTotal</string>
    <string name="IVA">IVA</string>
    <string name="total">Total</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnAgregar">Agregar</string>
</resources>